--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -5,9 +5,9 @@ sudo apt-add-repository ppa:teejee2008/ppa
 sudo add-apt-repository ppa:hluk/copyq
 sudo add-apt-repository ppa:numix/ppa
 sudo apt update
-sudo apt install vim xcape vlc xsel python-pygments openssh-server php-memcached \
-  memcached tmux htop make chrome-gnome-shell silversearcher-ag autojump \
-  tmuxinator gnome-sushi rename hardinfo jq lm-sensors firefox git copyq \
+sudo apt install curl vim xcape vlc xsel python-pygments openssh-server \
+  php-memcached memcached tmux htop make chrome-gnome-shell silversearcher-ag \
+  autojump tmuxinator gnome-sushi rename hardinfo jq lm-sensors firefox git copyq \
   gnome-tweak-tool gnome-shell-extensions python-setuptools aptik aptik-gtk \
   google-chrome-stable numix-icon-theme-circle numix-icon-theme-square clojure \
   openjdk-11-jdk openjdk-8-jdk
