--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -4,9 +4,9 @@
 GNOME_VERSION=`gnome-shell --version | cut -d ' ' -f 3 | tr -d '\n'`
 
 echo '\nInstalling packages with apt'
-sudo apt-add-repository ppa:teejee2008/ppa
-sudo add-apt-repository ppa:hluk/copyq
-sudo add-apt-repository ppa:numix/ppa
+sudo apt-add-repository -y ppa:teejee2008/ppa
+sudo add-apt-repository -y ppa:hluk/copyq
+sudo add-apt-repository -y ppa:numix/ppa
 sudo apt update
 sudo apt -y install curl vim xcape vlc xsel python-pygments openssh-server \
   php-memcached memcached tmux htop make chrome-gnome-shell silversearcher-ag \
