--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -1,10 +1,16 @@
 # Before running, you must:
+# sudo apt install git
 # git clone https://github.com/eggsyntax/dotfiles.git
+# wait for Software Updater to finish (visible in ps as /usr/bin/unattended-upgrade) (may take a long time)
+
+# Exit on any error, be strict
+set -euxo pipefail
 
 GNOME_VERSION=`gnome-shell --version | cut -d ' ' -f 3 | tr -d '\n'`
 
 echo '\nRunning apt upgrade before anything else'
 sudo apt -y upgrade
+
 echo '\nInstalling packages with apt'
 sudo apt-add-repository -y ppa:teejee2008/ppa
 sudo add-apt-repository -y ppa:hluk/copyq
